Feature - map interaction

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-              City of Seattle
+              Seattle
             </a>
           </div> <!-- navbar-header -->
           <div id="navbar" class="collapse navbar-collapse">
