Feature - Data is coming from mock json object

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <script src="./build/Detailstats.js"></script>
   <script src="./build/Filter.js"></script>
   <script src="./build/Map.js"></script>
+  <script src="./build/App.js"></script>
   <script src="./build/_main.js"></script>
 
 </body>
